--- a/app/globals.css
+++ b/app/globals.css
@@ -101,6 +101,7 @@ body {
 .nav {
   display: flex;
   gap: 25px;
+  align-items: center;
 }
 
 .nav-link {
@@ -113,17 +114,24 @@ body {
 
 .nav-link:hover {
   color: var(--primary);
+  transition: color 0.3s;
+    transition-duration: .2s;
 }
 
-/* .nav-link.active::after {
+.nav-link.active {
+  color: #4CAF50;
+  
+}
+
+.nav-link.active::after {
   content: '';
   position: absolute;
   bottom: -5px;
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: var(--primary);
-} */
+  background-color: #4CAF50;
+}
 
 .cart-icon {
   position: relative;
@@ -332,6 +340,7 @@ body {
 
 /* Filter Styles */
 .filter-section {
+  height: 70vh;
   background-color: white;
   padding: 20px;
   border-radius: 8px;
@@ -410,10 +419,8 @@ body {
 }
 
 .shop-sidebar {
-  background-color: white;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
   height: fit-content;
 }
 
@@ -740,3 +747,6 @@ body {
      justify-content: center;
    }
  }
+
+
+ 
