--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,14 @@ body {
   background-color: #f5f5f5;
 }
 
+.hero-faizal svg path {
+  fill: transparent;
+  stroke: #f5f5f5;
+  stroke-width: 0.7;
+  stroke-dasharray: 270;
+  stroke-dashoffset: 270;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
